menambahkan paragraf lorem

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
 
     <h1>Belajar remote git dan github</h1>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni minima, quam quisquam sed mollitia, nemo soluta ipsa et cupiditate repellendus incidunt molestiae necessitatibus consequuntur ratione reprehenderit. Sed in iure cumque.</p>
     
 </body>
 </html>
